--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,21 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "rootDir": "src",
-    "lib": [
-      "ES2015",
-      "DOM"
-    ],
-    "target": "ES2015",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src/**/*",
-    "src/svg.d.ts"
-  ],
-  "references": [
-    { "path": "../styles" }
-  ]
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"rootDir": "src",
+		"lib": ["ES2018", "DOM"],
+		"target": "ES2018",
+		"module": "commonjs",
+		"esModuleInterop": true,
+		"jsx": "react-jsx"
+	},
+	"include": ["src/**/*"],
+	"references": [{ "path": "../icons" }, { "path": "../styles" }]
 }
